--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
             <section class="hero overlay">
               <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="hero-button" type="button">Заказать услугу</button>
+                <button data-modal-open class="hero-button" type="button">Заказать услугу</button>
+
+                <div class="backdrop is-hidden" data-modal>
+                    <div class="modal">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, molestiae?</p>
+                        <button data-modal-close>закрыть</button>
+                    </div>
+                </div>
+
               </div>
             </section> 
         </div>
@@ -380,5 +388,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
