--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
                 <button data-modal-open class="hero-button" type="button">Заказать услугу</button>
 
                 <div class="backdrop is-hidden" data-modal>
-                    <div class="modal">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, molestiae?</p>
-                        <button data-modal-close>закрыть</button>
+                    <div class="modal">                
+                        <button data-modal-close class="close-button" type="button">
+                            <svg width="30" height="30" class="close-icon">
+                                <use href="./images/close-black-18dp (2) 1 (1).svg"></use>
+                            </svg>
+                        </button>
                     </div>
                 </div>
 
