--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">                
                         <button data-modal-close class="close-button" type="button">
-                            <svg width="30" height="30" class="close-icon">
-                                <use href="./images/close-black-18dp (2) 1 (1).svg"></use>
+                            <svg class="close-icon">
+                                <use href="./images/symbol-defs.svg#close-black"></use>
                             </svg>
                         </button>
                     </div>
