--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,13 @@
                 </ul> 
             <ul class="portlist link">
                 <li class="portfolio-list"> 
-                    <a href="" class="portfolio-site">                                        
-                        <img src="images/p-list.jpg" alt="список людей" height="294" width="370">
+                    <a href="" class="portfolio-site">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-list.jpg" alt="список людей" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Технокряк</h2>
                             <p class="portfolio-list-text">Веб-сайт</p>
@@ -63,7 +68,12 @@
 
                 <li class="portfolio-list"> 
                     <a href="" class="portfolio-site">
-                        <img src="images/p-basketball.jpg" alt="баскетбол" height="294" width="370">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-basketball.jpg" alt="баскетбол" height="294" width="370">
+                                <div class="sublist">
+                                    <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Постер New Orlean vs Golden Star</h2>
                             <p class="portfolio-list-text">Дизайн</p>
@@ -72,8 +82,13 @@
                 </li>
 
                 <li class="portfolio-list"> 
-                    <a href="" class="portfolio-site">                  
-                        <img src="images/p-seafood.jpg" alt="ресторан" height="294" width="370">
+                    <a href="" class="portfolio-site">
+                        <div class="potfolio-thumb">                 
+                            <img src="images/p-seafood.jpg" alt="ресторан" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Ресторан Seafood</h2>
                             <p class="portfolio-list-text">Приложение</p>
@@ -83,7 +98,12 @@
 
                 <li class="portfolio-list"> 
                     <a href="" class="portfolio-site">
-                        <img src="images/p-project-prime.jpg" alt="наушники" height="294" width="370">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-project-prime.jpg" alt="наушники" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Проект Prime</h2>
                             <p class="portfolio-list-text">Маркетинг</p>
@@ -93,7 +113,12 @@
 
                 <li class="portfolio-list"> 
                     <a href="" class="portfolio-site">
-                        <img src="images/p-boxes.jpg" alt="две коробки" height="294" width="370">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-boxes.jpg" alt="две коробки" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Проект Boxes</h2>
                             <p class="portfolio-list-text">Приложение</p>
@@ -103,7 +128,12 @@
 
                 <li class="portfolio-list"> 
                     <a href="" class="portfolio-site">
-                        <img src="images/p-inspiration.jpg" alt="монитор" height="294" width="370">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-inspiration.jpg" alt="монитор" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Inspiration has no Borders</h2>
                             <p class="portfolio-list-text">Веб-сайт</p>
@@ -113,7 +143,12 @@
 
                 <li class="portfolio-list"> 
                     <a href="" class="portfolio-site">
-                        <img src="images/p-издание-Limited-Edition.jpg" alt="открытая книга" height="294" width="370">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-издание-Limited-Edition.jpg" alt="открытая книга" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Издание Limited Edition</h2>
                             <p class="portfolio-list-text">Дизайн</p>
@@ -123,7 +158,12 @@
 
                 <li class="portfolio-list"> 
                     <a href="" class="portfolio-site">
-                        <img src="images/p-проект-LAB.jpg" alt="бирка на веревке" height="294" width="370">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-проект-LAB.jpg" alt="бирка на веревке" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Проект LAB</h2>
                             <p class="portfolio-list-text">Маркетинг</p>
@@ -133,7 +173,12 @@
 
                 <li class="portfolio-list"> 
                     <a href="" class="portfolio-site">
-                        <img src="images/p-growing-business.jpg" alt="ноутбук" height="294" width="370">
+                        <div class="potfolio-thumb">
+                            <img src="images/p-growing-business.jpg" alt="ноутбук" height="294" width="370">
+                            <div class="sublist">
+                                <p class="sublist-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="card-content">
                             <h2 class="portfolio-list-heading">Growing Business</h2>
                             <p class="portfolio-list-text">Приложение</p>
