--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
             <a href="./index.html" class="header-logo link">Web<span class="logotype">Studio</span></a>  
             <nav class="header-nav">
                 <ul class="site-nav link">
-                    <li class="header-item"> <a href="./index.html" class="link">Студия</a> </li>           
-                    <li class="header-item"> <a href="./portfolio.html" class="link current">Портфолио</a> </li> 
-                    <li class="header-item"> <a href="./contact.html" class="link">Контакты</a> </li> 
+                    <li class="header-item"><a href="./index.html" class="studia link">Студия</a> </li> 
+                    <li class="header-item"><a href="./portfolio.html" class="studia link current">Портфолио</a> </li> 
+                    <li class="header-item"><a href="./contact.html" class="studia link">Контакты</a> </li> 
                 </ul>
             </nav>    
                 <ul class="auth-nav link">
